2.AKS/GitOps/harbor/harbor-ingress-bitnami.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: cicd
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    helm.sh/chart: harbor-11.2.4
  name: harbor-ingress
  namespace: cicd
spec:
  rules:
  - host: harbor.nodespringboot.org
    http:
      paths:
      - backend:
          service:
            name: harbor-portal
            port:
              number: 80
              # name: http
        path: /(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-core
            port:
              # name: http
              number: 80
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-core
            port:
              # name: http
              number: 80
        path: /service(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-core
            port:
              # name: http
              number: 80
        path: /v2(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-core
            port:
              # name: http
              number: 80
        path: /chartrepo(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: harbor-core
            port:
              # name: http
              number: 80
        path: /c(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - harbor.nodespringboot.org
    secretName: harbor-ingress
